--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=delivery
+
+spring.r2dbc.url=r2dbc:postgresql://${POSTGRESQL_HOST:localhost}:${POSTGRESQL_PORT:5432}/vigihelp
+spring.r2dbc.username=${MYSQL_USER:postgres}
+spring.r2dbc.password=${MYSQL_PASSWORD:#adminadmin1}
