--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=delivery
 
-spring.r2dbc.url=r2dbc:postgresql://${POSTGRESQL_HOST:localhost}:${POSTGRESQL_PORT:5432}/vigihelp
+spring.r2dbc.url=r2dbc:postgresql://${POSTGRESQL_HOST:localhost}:${POSTGRESQL_PORT:5432}/delivery
 spring.r2dbc.username=${MYSQL_USER:postgres}
 spring.r2dbc.password=${MYSQL_PASSWORD:#adminadmin1}
 
@@ -14,3 +14,6 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
 kafka.topic.delivery-booked=delivery-booked
+# Configuration pour l'initialisation de la base de données
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
