--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=delivery
 
-spring.r2dbc.url=r2dbc:postgresql://${POSTGRESQL_HOST:localhost}:${POSTGRESQL_PORT:5432}/delivery
-spring.r2dbc.username=${MYSQL_USER:postgres}
-spring.r2dbc.password=${MYSQL_PASSWORD:#adminadmin1}
+spring.r2dbc.url=r2dbc:postgresql://${POSTGRESQL_HOST}:${POSTGRESQL_PORT}/delivery
+spring.r2dbc.username=${MYSQL_USER}
+spring.r2dbc.password=${MYSQL_PASSWORD:}
 
 spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
 spring.kafka.consumer.group-id=delivery-service
@@ -14,6 +14,6 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
 kafka.topic.delivery-booked=delivery-booked
-# Configuration pour l'initialisation de la base de données
+
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
